--- a/src/Restaurent.WebAPI/appsettings.json
+++ b/src/Restaurent.WebAPI/appsettings.json
@@ -13,5 +13,28 @@
         "AppDomain": "http://localhost:5173/",
         "ConfirmationLink": "confirm-email-success?uid={0}&token={1}",
         "ForgotPasswordLink": "reset-password?uid={0}&token={1}"
+    },
+    "SMTPConfig": {
+        "Username": "",
+        "UserDefaultCredentials": "false",
+        "SenderDisplayName": "",
+        "SenderAddress": "",
+        "Port": "",
+        "Password": "",
+        "Host": "",
+        "EnableSSL": "true",
+        "IsBodyHtml": "true"
+    },
+    "Jwt": {
+        "Key": "",
+        "Issuer": "",
+        "EXPIRATION_MINUTES": "5",
+        "Audience": ""
+    },
+    "RefreshToken": {
+        "EXPIRATION_MINUTES": "20"
+    },
+    "AllowedOrigins": {
+        "OriginName": ""
     }
 }
